<resources>
    <string name="app_name" translatable="false">CoronaTracker</string>
    <string name="country_name_label_text">Country name:</string>
    <string name="cases_colon_label_text">Cases:</string>
    <string name="cases_label_text">Cases</string>
    <string name="deaths_colon_label_text">Deaths:</string>
    <string name="deaths_label_text">Deaths</string>
    <string name="today_cases_label_text">Today cases:</string>
    <string name="today_deaths_label_text">Today deaths:</string>
    <string name="recovered_label_text">Recovered:</string>
    <string name="critical_colon_label_text">Critical:</string>
    <string name="critical_label_text">Critical</string>
    <string name="active_label_text">Active:</string>
    <string name="all_identified_cases_label_text">Infected</string>
    <string name="all_deaths_label_text">Dead</string>
    <string name="all_active_label_text">Active</string>
    <string name="cumulated_recovered_label_text">Recovered</string>
    <string name="reports_by_country_title">Reports By Country</string>
    <string name="cumulated_report_title">Cumulated Report</string>
    <string name="menu_refresh">Refresh</string>
    <string name="about_title">About the app</string>
    <string name="github_repo_label">GitHub Repo</string>
    <string name="repo_link" translatable="false">https://github.com/m1awicki/mobilecoronatracker</string>
    <string name="icons_authors_label">"Icons Authors"</string>
    <string name="data_source">Data source</string>
    <string name="about_text">This application is free and was created to help track progress of COVID-19 pandemic - disease caused by SARS-CoV-2 coronavirus discovered in 2019 in Wuhan, China.</string>
    <string name="credits" translatable="false">Credits:</string>
    <string name="credits_freepik_from_flaticon" translatable="false">made by Freepik from www.flaticon.com</string>
    <string name="credits_freepik_from_freepik" translatable="false">World vector created by freepik - www.freepik.com</string>
    <string name="credits_elite_da_myth_github" translatable="false">https://github.com/NovelCOVID/API</string>
    <string name="more_data">More data</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="accumulated_charts_title">Accumulated charts</string>
    <string name="tested">Tested</string>
    <string name="country_analysis">Country Analysis</string>
    <string name="country_history_chart_description">Country data from day of first case</string>
    <string name="per_one_million_of_citizens_chart_description">Cases, deaths and test per one million of citizens</string>
    <string name="daily_increase_of_infected">Daily increase of infected</string>
    <string name="daily_increase_of_infected_as_percentage_of_all">Daily increase of infected as % of all</string>
    <string name="license_label">License</string>
    <string name="full_license_url" translatable="false">https://github.com/m1awicki/mobilecoronatracker/blob/develop/LICENSE</string>
    <string name="full_license_direction_label">Full license text can be found here:</string>
    <string name="apache_2_limitation_of_liablity_excerpt" translatable="false">In no event and under no legal theory, whether in tort (including negligence), contract, or otherwise, unless required by applicable law (such as deliberate and grossly negligent acts) or agreed to in writing, shall any Contributor be liable to You for damages, including any direct, indirect, special, incidental, or consequential damages of any character arising as a result of this License or out of the use or inability to use the Work (including but not limited to damages for loss of goodwill, work stoppage, computer failure or malfunction, or any and all other commercial damages or losses), even if such Contributor has been advised of the possibility of such damages.</string>
    <string name="apache_2_license_label" translatable="false">Apache License 2.0</string>
    <string name="general_info_label">General information</string>
    <string name="credits_pixelperfect_from_flaticon" translatable="false">made by Pixel perfect from www.flaticon.com</string>
</resources>
