<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_bg"
        android:padding="@dimen/country_report_padding"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="200dp" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{item.country}"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="China" />

        <TextView
            android:id="@+id/cases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cases_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_name" />

        <TextView
            android:id="@+id/cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.cases)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/country_name"
            tools:text="123" />

        <TextView
            android:id="@+id/today_cases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_cases_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cases_label" />

        <TextView
            android:id="@+id/today_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.todayCases)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cases"
            tools:text="123" />

        <TextView
            android:id="@+id/deaths_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today_cases_label" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.deaths)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/today_cases"
            tools:text="123" />

        <TextView
            android:id="@+id/today_deaths_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_deaths_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deaths_label" />

        <TextView
            android:id="@+id/today_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.todayDeaths)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/deaths"
            tools:text="123" />

        <TextView
            android:id="@+id/recovered_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today_deaths_label" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.recovered)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/today_deaths"
            tools:text="123" />

        <TextView
            android:id="@+id/critical_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recovered_label" />

        <TextView
            android:id="@+id/critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.critical)}"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/recovered"
            tools:text="123" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="item"
            type="com.mobilecoronatracker.model.CountryReportModelable" />
    </data>
</layout>