<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/general_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/credits_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/general_info"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/credits_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/gh_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credits_label"
            android:layout_marginBottom="10dp"
            tools:listitem="@layout/item_credits"/>

        <Button
            android:id="@+id/gh_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/github_repo_label"
            android:textSize="21sp"
            android:background="@drawable/rounded_outline_rect_bg"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <variable
            name="adapter"
            type="com.mobilecoronatracker.ui.about.CreditsListAdapter" />
    </data>
</layout>