<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="200dp" />

        <TextView
            android:id="@+id/cumulated_cases_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_identified_cases_label_text"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cumulated_cases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.cases}"
            android:textSize="20sp"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="111" />

        <TextView
            android:id="@+id/cumulated_deaths_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_deaths_label_text"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cumulated_cases_label" />

        <TextView
            android:id="@+id/cumulated_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.deaths}"
            android:textSize="20sp"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cumulated_cases"
            tools:text="111" />

        <TextView
            android:id="@+id/cumulated_recovered_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cumulated_recovered_label_text"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cumulated_deaths_label" />

        <TextView
            android:id="@+id/cumulated_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.recovered}"
            android:textSize="20sp"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cumulated_deaths"
            tools:text="111" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <variable
            name="viewModel"
            type="com.mobilecoronatracker.ui.cumulatedreport.CumulatedReportViewModel" />
    </data>
</layout>